# Prismarine-Anchor

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  rustfmt.toml  style.md
crates/bedrock/bedrock-entries/: Cargo.toml
crates/bedrock/bedrock-entries/src/: entries.rs  lib.rs
crates/bedrock/bedrock-entries/src/enum_types/: actor_digest_version.rs  chunk_version.rs  mod.rs
crates/bedrock/leveldb-entries/: Cargo.toml
crates/bedrock/leveldb-entries/src/: entries.rs  entry.rs  errors.rs  interface.rs  key.rs  lib.rs
crates/bedrock/leveldb-entries/src/entries/: aabb_volumes.rs  actor.rs  actor_digest.rs  actor_digest_version.rs  border_blocks.rs  caves_and_cliffs_blending.rs  checksums.rs  data_2d.rs  data_3d.rs  finalized_state.rs  flat_world_layers.rs  hardcoded_spawners.rs  legacy_data_2d.rs  legacy_extra_block_data.rs  legacy_terrain.rs  legacy_version.rs  level_chunk_meta_data_dictionary.rs  subchunk_blocks.rs  version.rs
crates/bedrock/leveldb-entries/src/entries/helpers/: actor_id.rs  concatenated_nbt_compounds.rs  dimensioned_chunk_pos.rs  heightmap.rs  legacy_biome_data.rs  mod.rs  named_compound.rs  nibble_array.rs  palettized_storage.rs  uuid.rs
crates/bedrock/leveldb-entries/src/entries/wrappers/: mod.rs
crates/bedrock/leveldb-values/: Cargo.toml
crates/bedrock/leveldb-values/src/: aabb_volumes.rs  actor.rs  actor_digest.rs  actor_digest_version.rs  actor_id.rs  biome_state.rs  blending_data.rs  block_volume.rs  border_blocks.rs  checksums.rs  chunk_position.rs  chunk_version.rs  concatenated_nbt_compounds.rs  data_2d.rs  data_3d.rs  dimensioned_chunk_pos.rs  finalized_state.rs  flat_world_layers.rs  hardcoded_spawners.rs  heightmap.rs  legacy_data_2d.rs  legacy_extra_block_data.rs  legacy_terrain.rs  level_spawn_was_fixed.rs  lib.rs  metadata.rs  named_compound.rs  nibble_array.rs  palettized_storage.rs  subchunk_blocks.rs  uuid.rs
crates/cross-platform/mc-datatypes/: Cargo.toml
crates/cross-platform/mc-datatypes/src/: dimensions.rs  identifier.rs  lib.rs  positions.rs  version.rs
crates/editor/editor/: Cargo.toml
crates/editor/editor/src/: main.rs
crates/foundation/nbt/: Cargo.toml
crates/foundation/nbt/src/: io.rs  lib.rs  raw.rs  settings.rs
crates/foundation/nbt/src/serde/: mod.rs
crates/foundation/util/: Cargo.toml
crates/foundation/util/src/: char_conversion.rs  declare_and_pub_use.rs  lib.rs  lock_or_panic.rs  print_debug.rs
crates/unstable/macros/: Cargo.toml
crates/unstable/macros/src/: lib.rs
crates/unstable/translation/: Cargo.toml
crates/unstable/translation/src/: datatypes.rs  translator.rs
crates/unstable/translators/: Cargo.toml  README.md
crates/unstable/translators/src/: lib.rs
crates/unstable/translators/src/pymctranslate/: code_functions.rs  headers.rs  mappings.rs  mod.rs
crates/unstable/world/: Cargo.toml
crates/unstable/world/src/: zip_env.rs
crates/unstable/world/src/bedrock/: leveldb.rs  mod.rs
examples/crawl-worlds/: Cargo.toml  README.md
examples/crawl-worlds/src/: main.rs
iron-amulet/: Cargo.toml
iron-amulet-core/: Cargo.toml
iron-amulet-nbt/: Cargo.toml  LICENSE-quartz_nbt
iron-amulet-nbt/src/: encoding.rs  io.rs  lib.rs  limits.rs  raw.rs  repr.rs  settings.rs  snbt.rs  tag.rs
iron-amulet-nbt/src/serde/: array.rs  de.rs  mod.rs  ser.rs  util.rs
iron-amulet-nbt/src/snbt/: lexer.rs  mod.rs  utils.rs
iron-amulet-nbt/src/snbt/lexer/: numeric.rs  other_utils.rs
iron-amulet-nbt/src/tag/: limited.rs
iron-amulet-translate/: Cargo.toml
iron-amulet/src/: main.rs
iron-leveldb/: Cargo.toml
iron-leveldb/src/: lib.rs
iron-nbt/: Cargo.toml
iron-nbt/src/: io.rs  raw.rs  snbt.rs  tag.rs
iron-nbt/src/serde/: de.rs  mod.rs  ser.rs  util.rs
prismarine-anchor-derive/: Cargo.toml
prismarine-anchor-derive/src/: generate.rs  lib.rs
prismarine-anchor-editor/: Cargo.toml
prismarine-anchor-editor/src/: lib.rs  main.rs
prismarine-anchor-leveldb-entries/: Cargo.toml
prismarine-anchor-leveldb-entries/src/: entry.rs  key.rs  lib.rs
prismarine-anchor-leveldb-values/: Cargo.toml
prismarine-anchor-leveldb-values/src/: actor.rs  actor_digest.rs  actor_digest_version.rs  biome_state.rs  blending_data.rs  block_volume.rs  checksums.rs  chunk_position.rs  chunk_version.rs  concatenated_nbt_compounds.rs  data_2d.rs  data_3d.rs  dimensions.rs  finalized_state.rs  flat_world_layers.rs  hardcoded_spawners.rs  legacy_data_2d.rs  legacy_version.rs  level_spawn_was_fixed.rs  lib.rs  metadata.rs  nbt_compound_conversion.rs  palettized_storage.rs  subchunk_blocks.rs  uuid.rs  version.rs
prismarine-anchor-macros/: Cargo.toml
prismarine-anchor-macros/src/: generate.rs  lib.rs
prismarine-anchor-nbt/: Cargo.toml
prismarine-anchor-nbt/src/: io.rs  lib.rs  raw.rs  repr.rs  settings.rs  tag.rs
prismarine-anchor-nbt/src/serde/: array.rs  de.rs  mod.rs  ser.rs  util.rs
prismarine-anchor-nbt/src/snbt/: lexer.rs  mod.rs
prismarine-anchor-nbt/src/snbt/lexer/: numeric.rs  other_utils.rs
prismarine-anchor-nbt/src/tag/: comparable.rs  compound.rs  index_btree.rs  mod.rs  serde_impl.rs
prismarine-anchor-nbt/src/tag/index_btree/: iter.rs
prismarine-anchor-translation/: Cargo.toml
prismarine-anchor-translation/src/: datatypes.rs  lib.rs  translator.rs
prismarine-anchor-translators/: Cargo.toml
prismarine-anchor-translators/src/: lib.rs
prismarine-anchor-translators/src/pymctranslate/: code_functions.rs  headers.rs  mappings.rs  mod.rs  specifications.rs
prismarine-anchor-util/: Cargo.toml
prismarine-anchor-util/src/: enum_map.rs  inspect_none.rs  len_u32.rs  lib.rs  u64_equals_usize.rs
prismarine-anchor-world/: Cargo.toml
prismarine-anchor-world/src/: bedrock.rs  lib.rs  shared_types.rs  translation.rs  zip_env.rs
prismarine-anchor-world/src/bedrock/: db_entries.rs  leveldb.rs  mod.rs
prismarine-editor/: Cargo.toml
prismarine-editor/src/: lib.rs  main.rs
prismarine-nbt/: Cargo.toml  README.md
prismarine-nbt/src/serde/: array.rs  mod.rs
prismarine-world/: Cargo.toml
prismarine-world/src/: bedrock.rs  lib.rs  zip_env.rs
(+6 files in other folders)
