[workspace]
resolver = "2"
members = [
    "prismarine-anchor-editor",
    "prismarine-anchor-macros",
    "prismarine-anchor-nbt",
    "prismarine-anchor-translation",
    "prismarine-anchor-translators",
    "prismarine-anchor-world",
]

[workspace.package]
# No license provided to anyone for now; all rights reserved. See README for more.
# Note that some crates in this workspace don't use license.workspace = true
license = ""
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# Some of this toml is copied from egui's repository,
# it's my go-to large multicrate example project

[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unnecessarily large wasm for no performance gain

# debug = true # include debug symbols, useful when profiling wasm

# Note: will probably not ultimately use this for Prismarine Anchor,
# we should instead catch the unwind and try to save data to avoid losing everything from a crash,
# maybe. For now, whatever.
# Original comment:
# This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
panic = "abort"

[profile.dev]
# Can't leave this on by default, because it breaks the Windows build.
# Related: https://github.com/rust-lang/cargo/issues/4897
# split-debuginfo = "unpacked" # faster debug builds on mac
# opt-level = 1                # Make debug builds run faster

[profile.dev.package."*"]
# Optimize all dependencies even in debug builds (does not affect workspace packages):
opt-level = 2

[workspace.dependencies]
prismarine-anchor-editor        = { version = "0.1.0", path = "./prismarine-anchor-editor"      }
prismarine-anchor-macros        = { version = "0.1.0", path = "./prismarine-anchor-macros"      }
prismarine-anchor-nbt           = { version = "0.1.0", path = "./prismarine-anchor-nbt", features = ["comparable"] }
prismarine-anchor-translation   = { version = "0.1.0", path = "./prismarine-anchor-translation" }
prismarine-anchor-translators   = { version = "0.1.0", path = "./prismarine-anchor-translators" }
prismarine-anchor-world         = { version = "0.1.0", path = "./prismarine-anchor-world"       }


anyhow              = "1"
byteorder           = "1.5.0"
cesu8               = "1.1.0"
flate2              = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
float-cmp           = { version = "0.10.0", default-features = false, features = ["num-traits"] }
getrandom           = { version = "0.2", default-features = false }
indexmap            = { version = "2.7.1", features = ["serde"] }
rusty-leveldb       = { version = "3.0.2", default-features = false }
proc-macro2         = "1"
quote               = "1"
serde               = { version = "1", features = ["serde_derive"] }
# I'm trying to be as flexible as possible with Tolnay's crates that have
# a reputation for remaining very stable, though a bug involving raw identifiers
# like r#type was patched in 1.0.73.
# Overall, hopefully a consumer of crates here would be using up-to-date versions anyway.
serde_json          = "1.0.73"
syn                 = "2"
thiserror           = "2"
unicode_names2      = "1.3.0"
# Appears to be taken off GitHub? Can still read source on docs.rs
# Just in case, I'm forcing the version to be exactly 2.2.0, probably unnecessary
varint-rs           = "=2.2.0"
web-time            = "1.1.0"
zip                 = { version = "2.5.0", default-features = false, features = [
                        "deflate-flate2", "flate2", "time"
                    ] }


# enum-map = "2.7.3"
# smallvec = "1.14.0"
