[package]
name = "prismarine-anchor-derive"
authors = ["Finley Huggins"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "" # Will probably be MIT OR Apache-2.0.

[lib]
proc-macro = true

[dependencies]
anyhow      .workspace = true
proc-macro2 .workspace = true
quote       .workspace = true
syn         .workspace = true
