[package]
name = "prismarine-anchor-editor"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prismarine-anchor-nbt  .workspace = true

rusty-leveldb   .workspace = true
flate2          .workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# We don't directly use this, but our deps do, and it needs to have the js feature enabled.
getrandom = { workspace = true, features = ["js"] }
