[package]
name = "prismarine-anchor-leveldb-entries"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-leveldb-values    = { workspace = true, features = ["all"] }
prismarine-anchor-nbt               .workspace = true
prismarine-anchor-translation       .workspace = true

indexmap        = { workspace = true, optional = true }
serde           = { workspace = true, optional = true }
thiserror       .workspace = true
