[package]
name = "prismarine-anchor-leveldb-values"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-nbt           = { workspace = true, optional = true }
prismarine-anchor-translation   = { workspace = true, optional = true }
prismarine-anchor-util          = { workspace = true, optional = true }

indexmap        = { workspace = true, optional = true }
serde           = { workspace = true, optional = true }
thiserror       = { workspace = true, optional = true }
xxhash-rust     = { workspace = true, optional = true }
zerocopy        = { workspace = true, features = ["derive"], optional = true }

# NOTE:
# All these features are assumed to be independent of each other
# (well, aside from whatever dependencies they have);
# that is, if a feature is enabled, then the behavior of the code enabled by that feature
# should not change in any substantial way if a different feature is enabled.
#
# (A half-exception is enabling `prismarine-anchor-nbt/preserve_order`, but provided that
# no code here uses the NBT compound's internal map type, that's fine.
# Going from an unspecified order to a specific order is not a breaking change.)
#
# This assumption allows testing to be faster; we need only test each feature individually.
[features]
all = [
    "dimensions", "chunk_position", "uuid",
    "concatenated_nbt_compounds", "nbt_compound_conversion", "palettized_storage",
    "chunk_version", "actor_digest_version",
    "data_3d", "data_2d", "legacy_data_2d",
    "subchunk_blocks", "legacy_terrain", "legacy_extra_block_data",
    "border_blocks", "hardcoded_spawners", "aabb_volumes",
    "checksums", "metadata",
    "finalized_state", "biome_state", "conversion_data", "blending_data",
    "actor_digest", "actor",
    "flat_world_layers", "level_spawn_was_fixed"
]
dimensions                  = []
chunk_position              = ["dimensions", "dep:prismarine-anchor-util"]
uuid                        = ["dep:prismarine-anchor-util"]
concatenated_nbt_compounds  = ["dep:prismarine-anchor-nbt"]
nbt_compound_conversion     = ["dep:prismarine-anchor-nbt"]
palettized_storage          = ["dep:zerocopy"]
chunk_version               = ["dep:prismarine-anchor-translation", "dep:prismarine-anchor-util"]
actor_digest_version        = ["dep:prismarine-anchor-translation", "dep:prismarine-anchor-util"]
data_3d                     = ["palettized_storage", "dep:prismarine-anchor-util", "dep:zerocopy"]
data_2d                     = ["dep:zerocopy", "dep:prismarine-anchor-util"]
legacy_data_2d              = ["dep:zerocopy", "dep:prismarine-anchor-util"]
subchunk_blocks             = [
    "palettized_storage", "dep:prismarine-anchor-nbt", "dep:prismarine-anchor-util"
]
legacy_terrain              = []
legacy_extra_block_data     = []
border_blocks               = []
hardcoded_spawners          = ["dep:prismarine-anchor-translation", "dep:prismarine-anchor-util"]
aabb_volumes                = []
checksums                   = []
metadata                    = [
    "dimensions", "prismarine-anchor-nbt/preserve_order", "dep:prismarine-anchor-util",
    "dep:indexmap", "dep:xxhash-rust", "dep:thiserror"
]
finalized_state             = ["dep:prismarine-anchor-util"]
biome_state                 = ["dep:prismarine-anchor-util"]
conversion_data             = []
caves_and_cliffs_blending   = []
blending_biome_height       = []
blending_data               = []
actor_digest                = ["actor", "dep:prismarine-anchor-util"]
actor                       = []
flat_world_layers           = []
level_spawn_was_fixed       = []
