[package]
name = "prismarine-anchor-macros"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow      .workspace = true
proc-macro2 .workspace = true
quote       .workspace = true
syn         .workspace = true
